--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@prisma/client": "^5.21.1",
     "@types/jsonwebtoken": "^9.0.6",
     "aws-sdk": "^2.1692.0",
-    "axios": "^1.7.9",
+    "axios": "^1.13.4",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cloudinary": "^2.3.1",
@@ -55,6 +55,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "node-cron": "^3.0.3",
+    "node-ical": "^0.24.0",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
     "pdfkit": "^0.15.1",
